[metadata]
# replace with your username:
name = shannon-ca
version = 0.0.2
author = Benjamin DeMeo
author_email = bdemeo@g.harvard.edu
description = Shannon Components Analysis for informative dimensionality reduction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bdemeo/sca
project_urls =
    Bug Tracker = https://github.com/bendemeo/sca/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
download-url = https://github.com/bendemeo/sca/archive/refs/tags/0.0.1.tar.gz
[options]
packages = find:
python_requires = >=3.0

[options.packages.find]
where = sca